--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amita&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -6,20 +8,25 @@
 
 :root {
   --primary-color: #534c4c;
+  --primary-color-2: #6e6464;
   --primary-color-light: #766d6d;
   --secondary-color: #cfd8dc;
+  --secondary-color-light: #f6f8f9;
   --white: #f5f5f5;
 
   --line-height: 1.75;
   --max-width: 1300px;
-  --border-radius: 1rem;
-  --border-radius-small: 0.5rem;
+  --radius: 1rem;
+  --radius-small: 0.5rem;
+  --spacing: 0.1rem;
+  --transition: all 0.3s linear;
 }
 
 body {
-  /* TODO KEEP? */
+  /* TODO KEEP line height? */
   line-height: var(--line-height);
-  /* END */
+  font-family: 'Amita', cursive;
+  background-color: var(--white);
 }
 
 img {
@@ -34,6 +41,9 @@ img {
 li {
   list-style: none;
 }
+p {
+  font-size: 20px;
+}
 
 .container {
   margin: 0 auto;
@@ -41,4 +51,68 @@ li {
 }
 .section {
   padding: 5rem 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin: 0.75rem auto;
+}
+
+.title-big {
+  font-size: 120px;
+}
+.title-primary {
+  font-size: 80px;
+}
+
+.content {
+  margin: 10px auto;
+  color: var(--primary-color);
+}
+
+.btn {
+  text-transform: uppercase;
+  color: var(--secondary-color);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  font-weight: 400;
+  transition: var(--transition);
+  text-decoration: none;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+  border-color: transparent;
+}
+
+.btn-primary {
+  background: var(--primary-color-2);
+  border: 1px solid #766c6c;
+
+  box-shadow: 0px 2px 0 var(--primary-color-2),
+    2px 4px 6px var(--primary-color-2);
+  font-weight: 900;
+  letter-spacing: 1px;
+  transition: all 150ms linear;
+}
+
+.btn-primary:hover {
+  background: var(--primary-color-2);
+  border: 1px solid rgba(110, 100, 100, 0.5);
+  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
+  color: #2e2e2e;
+
+  text-shadow: -1px -1px 0 var(--primary-color-2);
+  transition: all 250ms linear;
+}
+
+.btn-primary:active {
+  box-shadow: 1px 2px 3px #2e2e2e;
+  transition: all 250ms linear;
 }
