--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ p {
   max-width: var(--max-width);
 }
 .section {
-  padding: 5rem 0;
+  padding: 5rem 0 3rem;
 }
 
 h1,
@@ -78,7 +78,7 @@ h5 {
 
 .btn {
   text-transform: uppercase;
-  color: var(--secondary-color);
+  color: #444;
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
@@ -89,6 +89,7 @@ h5 {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   border-color: transparent;
+  outline: none;
 }
 
 .btn-primary {
