--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --secondary-color: #cfd8dc;
   --secondary-color-light: #f6f8f9;
   --white: #f5f5f5;
+  --white-2: #eef2f8;
 
   --line-height: 1.75;
   --max-width: 1300px;
@@ -90,6 +91,7 @@ h5 {
   border-radius: var(--radius);
   border-color: transparent;
   outline: none;
+  background: var(--white-2);
 }
 
 .btn-primary {
@@ -98,9 +100,13 @@ h5 {
 
   box-shadow: 0px 2px 0 var(--primary-color-2),
     2px 4px 6px var(--primary-color-2);
+
+  box-shadow: 20px 10px 10px #d0d0d0, -20px -10px 30px #ffffff;
   font-weight: 900;
   letter-spacing: 1px;
   transition: all 150ms linear;
+
+  background: var(--white-2);
 }
 
 .btn-primary:hover {
@@ -109,8 +115,8 @@ h5 {
   box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
   color: #2e2e2e;
 
-  text-shadow: -1px -1px 0 var(--primary-color-2);
   transition: all 250ms linear;
+  background: var(--white-2);
 }
 
 .btn-primary:active {
