--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --primary-color: #534c4c;
   --primary-color-2: #6e6464;
   --primary-color-light: #766d6d;
+  --primary-dark: #1e1b1b;
+
   --secondary-color: #cfd8dc;
   --secondary-color-light: #f6f8f9;
   --white: #f5f5f5;
@@ -46,14 +48,6 @@ p {
   font-size: 20px;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
-.section {
-  padding: 5rem 0 3rem;
-}
-
 h1,
 h2,
 h3,
@@ -63,6 +57,21 @@ h5 {
   text-transform: capitalize;
   line-height: 1.25;
   margin: 0.75rem auto;
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+a:hover {
+  color: var(--primary-dark);
+}
+.container {
+  margin: 0 auto;
+  max-width: var(--max-width);
+}
+.section {
+  padding: 5rem 0 3rem;
 }
 
 .title-big {
