--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 }
 
 :root {
+  --background-color: #f3f4f6;
+
   --primary-color: #534c4c;
   --primary-color-2: #6e6464;
   --primary-color-light: #766d6d;
@@ -17,6 +19,16 @@
   --white: #f5f5f5;
   --white-2: #eef2f8;
 
+  /* SHADOW */
+  --shadow-bottom: #ffffff;
+  --shadow-top: #d0d0d0;
+  /* END - SHADOW */
+
+  /* LINES */
+  --line-color: 253, 142, 142;
+  --line-color-light: rgba(var(--line-color), 0.5);
+  /* END - LINES */
+
   --line-height: 1.75;
   --max-width: 1300px;
   --radius: 1rem;
@@ -24,6 +36,25 @@
   --spacing: 0.1rem;
   --transition: all 0.3s linear;
 }
+
+/* THEME */
+.light-mode {
+  --background-color: #f3f4f6;
+  --primary-color: #534c4c;
+  --shadow-top: #ffffff;
+  --shadow-bottom: #d0d0d0;
+  --line-color: 208, 208, 208;
+}
+.dark-mode {
+  --background-color: #534c4c;
+  --primary-color: #f6f8f9;
+  --shadow-top: #6e6464;
+  --shadow-bottom: #1e1b1b;
+  --secondary-color: #cfd8dc;
+  --line-color: 255, 203, 182;
+}
+
+/* END - THEME */
 
 ::-webkit-scrollbar {
   display: none;
@@ -33,7 +64,9 @@ body {
   /* TODO KEEP line height? */
   line-height: var(--line-height);
   font-family: 'Amita', cursive;
-  background-color: var(--white);
+  background-color: var(--background-color);
+  color: var(--primary-color);
+  transition: var(--transition);
 }
 
 img {
@@ -43,6 +76,7 @@ img {
   height: auto;
   object-fit: cover;
   object-position: 50% 50%;
+  outline: none;
 }
 
 li {
@@ -60,7 +94,7 @@ h5 {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
-  margin: 0.75rem auto;
+  margin: 0.75rem 0;
 }
 
 a {
@@ -114,7 +148,8 @@ a:hover {
   box-shadow: 0px 2px 0 var(--primary-color-2),
     2px 4px 6px var(--primary-color-2);
 
-  box-shadow: 20px 10px 10px #d0d0d0, -20px -10px 30px #ffffff;
+  box-shadow: 20px 10px 10px var(--shadow-bottom),
+    -20px -10px 30px var(--shadow-top);
   font-weight: 900;
   letter-spacing: 1px;
   transition: all 150ms linear;
