--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ html {
   --white-2: #eef2f8;
 
   /* SHADOW */
-  --shadow-bottom: #ffffff;
-  --shadow-top: #d0d0d0;
+  --shadow-bottom: #95aac3;
+  --shadow-top: #05254b;
   /* END - SHADOW */
 
   /* LINES */
@@ -43,21 +43,21 @@ html {
 }
 
 /* THEME */
-.light-mode {
+/* .light-mode {
   --background-color: #f3f4f6;
   --primary-color: #534c4c;
   --shadow-top: #ffffff;
   --shadow-bottom: #d0d0d0;
   --line-color: 208, 208, 208;
-}
-.dark-mode {
+} */
+/* .dark-mode {
   --background-color: #534c4c;
   --primary-color: #f6f8f9;
   --shadow-top: #6e6464;
   --shadow-bottom: #1e1b1b;
   --secondary-color: #cfd8dc;
   --line-color: 255, 203, 182;
-}
+} */
 
 /* END - THEME */
 
@@ -69,8 +69,8 @@ body {
   /* TODO KEEP line height? */
   line-height: var(--line-height);
   font-family: 'Amita', cursive;
-  background-color: var(--background-color);
-  color: var(--primary-color);
+  background-color: #ffffff;
+  color: #05254b;
   transition: var(--transition);
 }
 
@@ -107,7 +107,7 @@ h5 {
 a {
   text-decoration: none;
 
-  color: var(--primary-color);
+  color: #05254b;
 }
 a:hover {
   color: var(--primary-color);
@@ -117,7 +117,7 @@ a:hover {
   max-width: var(--max-width);
 }
 .section {
-  padding: 5rem 0 3rem;
+  padding: 5rem 0 0rem;
 }
 
 .title-big {
@@ -148,6 +148,13 @@ a:hover {
   border-color: transparent;
   outline: none;
   background: var(--white-2);
+}
+
+.btn__primary-center {
+  display: block;
+  margin: 1rem auto;
+  background-color: #f07c41;
+  border: 1px solid #f6fafd;
 }
 
 .btn-primary {
@@ -190,8 +197,8 @@ a:hover {
   padding: 0 5px;
   border-radius: var(--radius-small);
   margin-bottom: 2rem;
-  color: var(--background-color);
-  background-color: var(--primary-color);
+  color: #05254b;
+  background-color: transparent;
 }
 
 .highlight-large {
