--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Amita&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Esteban&family=Montserrat&family=Satisfy&display=swap');
 
 * {
   padding: 0;
@@ -25,7 +24,7 @@ html {
   --white-2: #eef2f8;
 
   /* SHADOW */
-  --shadow-bottom: #95aac3;
+  --shadow-bottom: #8abcf7;
   --shadow-top: #05254b;
   /* END - SHADOW */
 
@@ -35,7 +34,7 @@ html {
   /* END - LINES */
 
   --line-height: 1.75;
-  --max-width: 1300px;
+  --max-width: 1170px;
   --radius: 1rem;
   --radius-small: 0.5rem;
   --spacing: 0.1rem;
@@ -68,7 +67,7 @@ html {
 body {
   /* TODO KEEP line height? */
   line-height: var(--line-height);
-  font-family: 'Amita', cursive;
+  font-family: 'Montserrat', sans-serif;
   background-color: #ffffff;
   color: #05254b;
   transition: var(--transition);
@@ -89,8 +88,6 @@ li {
 }
 p {
   font-size: 20px;
-
-  font-family: 'Spectral', serif;
 }
 
 h1,
@@ -102,22 +99,39 @@ h5 {
   text-transform: capitalize;
   line-height: 1.25;
   margin: 0.75rem 0;
+  font-family: 'Esteban', serif;
 }
 
 a {
+  color: #3b8ff2;
   text-decoration: none;
-
-  color: #05254b;
 }
 a:hover {
   color: var(--primary-color);
 }
+
+button:disabled,
+button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
+.logo {
+  font-family: 'Satisfy', cursive;
+}
+
 .container {
   margin: 0 auto;
   max-width: var(--max-width);
 }
 .section {
-  padding: 5rem 0 0rem;
+  padding: 5rem 1rem 1rem;
+}
+
+.title {
+  text-align: center;
+  padding-bottom: 5rem;
 }
 
 .title-big {
@@ -130,12 +144,11 @@ a:hover {
 .content {
   margin: 10px auto;
   color: var(--primary-color);
-  font-family: 'Spectral', serif;
 }
 
 .btn {
   text-transform: uppercase;
-  color: #444;
+  color: var(--white-2);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
@@ -154,7 +167,6 @@ a:hover {
   display: block;
   margin: 1rem auto;
   background-color: #f07c41;
-  border: 1px solid #f6fafd;
 }
 
 .btn-primary {
