--- a/src/index.css
+++ b/src/index.css
@@ -110,11 +110,16 @@ a:hover {
   color: var(--primary-color);
 }
 
+input,
+textarea {
+  font-family: 'Esteban', serif;
+}
 button:disabled,
 button[disabled] {
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+  cursor: default;
 }
 
 .logo {
@@ -184,16 +189,6 @@ button[disabled] {
 
   background: var(--background-color);
   color: var(--primary-color);
-}
-
-.btn-primary:hover {
-  background: var(--primary-color-2);
-  border: 1px solid rgba(110, 100, 100, 0.5);
-  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
-  color: #2e2e2e;
-
-  transition: all 250ms linear;
-  background: var(--white-2);
 }
 
 .btn-primary:active {
